k8s/monitoring/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: skipa-grafana
  namespace: skala3-finalproj-class2-team8
spec:
  type: ClusterIP
  selector:
    app: skipa-grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
