k8s/monitoring/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: skipa-prometheus
  namespace: skala3-finalproj-class2-team8
spec:
  type: ClusterIP
  selector:
    app: skipa-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
